--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -1,6 +1,6 @@
-name: Actions 😎
+name: Build my Game
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -13,6 +13,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+
+      # Cache Library folder to speed up builds
+      - name: Cache Library folder
+        uses: actions/cache@v3
+        with:
+          path: Library
+          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+          restore-keys: |
+            Library-
       
       # Debug: List repository contents
       - name: Debug - List repository contents
@@ -59,5 +68,26 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Build
+          name: webgl-build
+          path: build/WebGL/WebGLBuild
+          retention-days: 14
+
+  # Deploy to Pages
+  deployPages: 
+    needs: build
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    steps:
+      # Download the build artifacts
+      - uses: actions/download-artifact@v4
+        with:
+          name: webgl-build
           path: build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4
+        with: 
+          folder: build
+          branch: gh-pages
+          clean: true  # This will clean up the gh-pages branch
+          single-commit: true
