--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -68,8 +68,8 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: webgl-build
-          path: build/WebGL/WebGLBuild
+          name: Build
+          path: build
           retention-days: 14
 
   # Deploy to Pages
@@ -81,7 +81,7 @@ jobs:
       # Download the build artifacts
       - uses: actions/download-artifact@v4
         with:
-          name: webgl-build
+          name: Build
           path: build
 
       - name: Deploy
