--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -85,7 +85,7 @@ jobs:
           path: build
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4
+        uses: JamesIves/github-pages-deploy-action@v4.4.3
         with: 
           folder: build
           branch: gh-pages
