--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Build
-          path: build
+          path: build/WebGL
           retention-days: 14
 
   # Deploy to Pages
