--- a/.github/workflows/buildProject.yml
+++ b/.github/workflows/buildProject.yml
@@ -91,7 +91,7 @@ jobs:
 
       - name: Upload to itch.io
         # https://itch.io/docs/butler/pushing.html
-        run: butler push build ${{ secrets.ITCH_USER }}/${{ secrets.ITCH_GAME }}:html5
+        run: butler push build gercen/ch:html5
         env:
           BUTLER_API_KEY: ${{ secrets.BUTLER_CREDENTIALS }}
           
